--- a/loop1.yml
+++ b/loop1.yml
@@ -1,10 +1,13 @@
 ---
-- name: "Count our fruit"
-  ansible.builtin.debug:
-    msg: "{{ item }} with index {{ my_idx }}"
-  loop:
-    - apple
-    - banana
-    - pear
-  loop_control:
-    index_var: my_idx
+- name: testing playbook
+  hosts: localhost
+  tasks:
+    - name: "Count our fruit"
+      ansible.builtin.debug:
+        msg: "{{ item }} with index {{ my_idx }}"
+      loop:
+        - apple
+        - banana
+        - pear
+      loop_control:
+        index_var: my_idx
